# voltaserve

./: .env  .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  LICENSE.md  NOTICE.md  README.md  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.multi-node.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  rustfmt.toml  voltaserve.code-workspace
.github/: pr-title-checker-config.json
.run/: all (go).run.xml  all (node).run.xml  all (python).run.xml  all (rust).run.xml  api.run.xml  console.run.xml  conversion.run.xml  idp.run.xml  language.run.xml  migrations.run.xml  mosaic.run.xml  ui.run.xml  webdav.run.xml
.zed/: debug.json
admin/: .dockerignore  Dockerfile  Dockerfile_api  pyproject.toml
admin/api/: .env  dependencies.py  exceptions.py  main.py  uvi.py
admin/api/database/: __init__.py  group.py  index.py  invitation.py  organization.py  overview.py  snapshot.py  task.py  user.py  workspace.py
admin/api/errors/: __init__.py  api_errors.py  database_errors.py  error_codes.py
admin/api/models/: __init__.py  generic.py  group.py  grouppermission.py  groupuser.py  index.py  invitation.py  organization.py  organizationuser.py  overview.py  snapshot.py  snapshotfile.py  task.py  token.py  user.py  userpermission.py  workspace.py
admin/api/routers/: __init__.py  exceptions.py  group.py  index.py  invitation.py  organization.py  overview.py  snapshot.py  task.py  token.py  user.py  users.py  workspace.py
api/: .air.toml  .dockerignore  .env  .gitattributes  .gitignore  .golangci.yml  DEVELOPMENT.md  Dockerfile  Dockerfile.rhel  Dockerfile.sle  README.md  config.yml  go.mod  go.sum  install-deps.sh  main.go
console/: .flake8  Dockerfile  README.md  pyproject.toml
console/api/: .env  __init__.py  dependencies.py  log.py  main.py  uvi.py
console/api/database/: __init__.py  generic.py  group.py  index.py  invitation.py  organization.py  overview.py  snapshot.py  task.py  user.py  userpermission.py  workspace.py
console/api/dependencies/: __init__.py  database.py  jwt.py  meilisearch.py  redis.py  settings.py  user.py  utils.py
console/api/errors/: __init__.py  api_errors.py  database_errors.py  error_codes.py
console/api/models/: __init__.py  generic.py  group.py  grouppermission.py  groupuser.py  index.py  invitation.py  organization.py  overview.py  snapshot.py  snapshotfile.py  task.py  token.py  user.py  userpermission.py  workspace.py
console/api/routers/: __init__.py  group.py  index.py  invitation.py  organization.py  overview.py  snapshot.py  user.py  userpermission.py  workspace.py
conversion/: .env  .gitignore  .golangci.yml  Dockerfile  Dockerfile-serverless  Dockerfile.rhel  Dockerfile.rhel9  Dockerfile.sle  Dockerfile.sle15  README.md  go.mod  go.sum  install-deps.sh  install_deps_rhel9.sh  main.go
db/: Dockerfile  README.md
desktop/: .gitignore  CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
idp/: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .pnp.cjs  .prettierignore  .prettierrc.json  DEVELOPMENT.md  Dockerfile  Dockerfile.rhel  Dockerfile.sle  README.md  app.ts  bun.lockb  config.yml  deno.json  eslint.config.cjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  swagger.js  tsconfig.json
infra/: install.sh  install_deps_rhel9.sh  setup.sh  start.sh  stop.sh
language/: .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.rhel  Dockerfile.sle  Pipfile  README.md  app.py  models.yaml  pyproject.toml  requirements.txt  server.py
language/api/routers/: entities.py  health.py  version.py
language/api/services/: __init__.py  entities.py  models.py
licenses/: BSL.txt
migrations/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh
migrations/src/: lib.rs  m20240718_000001_create_user.rs  m20240718_000002_create_organization.rs  m20240718_000003_create_workspace.rs  m20240718_000004_create_group.rs  m20240718_000005_create_invitation.rs  m20240718_000006_create_snapshot.rs  m20240718_000007_create_file.rs  m20240718_000008_create_task.rs  m20240718_000009_create_grouppermission.rs  m20240718_000010_create_userpermission.rs  m20240723_000001_drop_organization_user.rs  m20240723_000002_drop_group_user.rs  m20240726_000001_normalize_schema.rs  m20240807_000001_add_mobile_column.rs  m20240807_000001_add_segmentation_column.rs  m20240905_000001_add_user_active_admin_fields.rs  m20240907_000001_add_user_force_change_password_field.rs  m20240913_000001_drop_segmentation_column.rs  m20241114_000001_drop_user_force_change_password_column.rs  m20241209_000001_add_user_failed_attempts_column.rs  m20241209_000001_add_user_locked_until_column.rs  m20250225_000001_add_summary_column.rs  m20250226_000001_add_intent_column.rs  m20250228_000001_drop_snapshot_status_column.rs  m20250328_000001_drop_userpermission_user_fkey.rs  m20250328_000002_drop_task_user_fkey.rs  m20250328_000003_drop_invitation_user_fkey.rs  m20250404_000001_update_password_hash_column.rs  m20250420_000001_add_user_strategy_column.rs  m20250421_000001_create_action.rs  m20250421_000002_create_run.rs  m20250421_000003_create_storage_quota.rs  m20250421_000004_create_murph_quota.rs  m20250729_000001_add_workspace_image_column.rs  m20250729_000002_add_group_image_column.rs  m20250729_000003_add_organization_image_column.rs  models.rs
migrations/src/models/: v1.rs  workspace.rs
migrations/src/models/v1/: action.rs  file.rs  group.rs  invitation.rs  murph_quota.rs  organization.rs  run.rs  snapshot.rs  storage_quota.rs  task.rs  user.rs  workspace.rs
mosaic/: .golangci.yml  Dockerfile  Program.cs  README.md  Startup.cs  go.mod  go.sum  main.go  mosaic.csproj  mosaic.sln
mosaic-next/: .env  Dockerfile  go.mod  go.sum  main.go
multi-node/: redis3.conf
murph/: .env
payment/: Dockerfile  logger.yaml  pyproject.toml
payment/src/: main.py
performance/: .gitignore  Defyle.WebApi.csproj  Dockerfile  Dockerfile.webapi  Program.cs  README.md  Startup.cs  appsettings.json  webapi.sln  (+2 more)
(+1956 files in other folders)
