[tool.poetry]
name = "voltaserve-console"
version = "3.0.0"
license = "BUSL-1.1"
description = "Voltaserve Console"
authors = ["Piotr Łoboda <voltaserve@lobson.pl>"]
maintainers = ["Piotr Łoboda <voltaserve@lobson.pl>"]
packages = [
    { include = 'api/' },
    { include = 'api/routers' },
    { include = 'api/models' },
    { include = 'api/database' },
    { include = 'api/errors' },
    { include = 'api/dependencies' },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.111.1"
uvicorn = "0.30.1"
psycopg = { extras = ["binary"], version = "3.2.1" }
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
PyJWT = "2.8.0"
fastapi-utils = "0.7.0"
typing-inspect = "0.9.0"
aiohttp = "3.10.11"
meilisearch = "0.32.0"
redis = "5.0.3"
sqids = "0.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"
black = "24.10.0"
isort = "5.13.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
