[tool.poetry]
name = "language"
version = "2.0.0"
description = "Voltaserve Language"
authors = ["Elias Bouassaba <ebouassaba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
spacy = "3.7.4"
requests = "2.32.2"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
