[tool.poetry]
name = "voltaserve-language"
version = "3.0.0"
license = "BUSL-1.1"
description = "Voltaserve Language"
authors = ["Anass Bouassaba <anass@voltaserve.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
flask = "3.0.3"
spacy = "3.7.4"
requests = "2.32.2"

[tool.poetry.dev-dependencies]
black = "24.4.2"
flake8 = "7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
